--- a/source/stylesheets/brand2.css
+++ b/source/stylesheets/brand2.css
@@ -8,6 +8,7 @@
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;   
+  margin-bottom: 30px;
  }
 .padding-left-none{
   padding-left:0px;
@@ -24,11 +25,19 @@
 .margin-none {
   margin:0px;
 }
+h1.header {
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
 .breadcrumb {
-  padding-top:4px;
+  padding-top:0px;
   padding-bottom:4px;
   font-size:11px;
   font-weight:bold;
+  padding-left: 0px;
+}
+.breadcrumb a {
+  text-decoration: none !important;
 }
 .bg-lblue {
   background-color:#2283e4;
@@ -292,7 +301,7 @@ code, kbd, pre, samp {
     background: none repeat scroll 0 0 #f0f2f1;
     border-radius: 3px;
     color: #f4645f;
-    padding: 1px 5px;
+    padding: 1px 5px; 
 }
 .token.comment, .token.prolog, .token.doctype, .token.cdata {
     color: #999;
