updated graphic on User landing page.

--- a/source/stylesheets/brand2.css
+++ b/source/stylesheets/brand2.css
@@ -191,7 +191,7 @@ article ul {
     list-style: none;
     line-height: normal !important;
 }
-article li:before { 
+article ul li:before { 
     content: "";
     border-color: transparent #ccc;
     border-style: solid;
