maybe make links more robust to moving directories

--- a/source/tech/entity_definitions/core/variant_interpretation.md.erb
+++ b/source/tech/entity_definitions/core/variant_interpretation.md.erb
@@ -19,6 +19,6 @@ VariantInterpretations are frequently updated when new information becomes avail
 Primary Examples
 ----------------
 
-[VarInterp274](../details/details.html#CG-EX:VarInterp274) and
-[VarInterp063](../details/details.html#CG-EX:VarInterp063) are fully-realized examples
-and may serve as a starting point for exploring the model.
+<%= link_to 'VarInterp274', '/tech/details/details.html#CG-EX:VarInterp274' %> and
+<%= link_to 'VarInterp063', '/tech/details/details.html#CG-EX:VarInterp063' %> 
+are fully-realized examples and may serve as a starting point for exploring the model.
