--- a/source/templates/entity.html.erb
+++ b/source/templates/entity.html.erb
@@ -11,7 +11,8 @@
     <% end %>
 
     <%- local_attributes = attributes_by_entity(entity_id) %>
-    <% if local_attributes.any? %>
+    <%- inherited_attributes = inherited_attributes_by_entity(entity_id) %>
+    <% if local_attributes.any? || inherited_attributes.any? %>
     <h2>Attributes</h2>
 
         <table class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -22,6 +23,7 @@
                 <th>Cardinality</th>
                 <th>Description</th>
                 <th>IRI</th>
+                <th>Defined in</th>
             </tr>
             </thead>
             <tbody>
@@ -32,41 +34,22 @@
                 <td><%= a['cardinality'] %></td>
                 <td><%= a['description'] %></td>
                 <td><%= a['iri'] %></td>
+                <td><%= a['defined_in'] %></td>
+            </tr>
+        <% end %>
+        <% inherited_attributes.each do |a| %>
+            <tr>
+                <td><%= a['name'] %></td>
+                <td><%= a['dataType'] %></td>
+                <td><%= a['cardinality'] %></td>
+                <td><%= a['description'] %></td>
+                <td><%= a['iri'] %></td>
+                <td><%= a['defined_in'] %></td>
             </tr>
         <% end %>
             </tbody>
         </table>
-    <% end # if there are local attributes %>
-
-<!--
-    <%- inherited_attributes = inherited_attributes_by_entity(entity_id) %>
-    <% if inherited_attributes.any? %>
-    <h2>Inherited Attributes</h2>
-
-        <table class="table table-striped table-bordered" cellspacing="0" width="100%">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Cardinality</th>
-                <th>Description</th>
-                <th>IRI</th>
-            </tr>
-            </thead>
-            <tbody>
-                <% inherited_attributes.each do |a| %>
-                <tr>
-                    <td><%= a['name'] %></td>
-                    <td><%= a['dataType'] %></td>
-                    <td><%= a['cardinality'] %></td>
-                    <td><%= a['description'] %></td>
-                    <td><%= a['iri'] %></td>
-                </tr>
-                <% end %>
-            </tbody>
-        </table>
-    <% end # if there are inherited attributes %>
--->
+    <% end # if there are attributes %>
 
     <%- examples = examples_by_type(entity_id) || [] %>
     <% if examples.any? %>
