Simple nav formatting update

--- a/source/stylesheets/brand2.css
+++ b/source/stylesheets/brand2.css
@@ -177,6 +177,7 @@ blockquote {
   border-radius: 0;
   border:none;
   padding-bottom: 0;
+  border-left: 1px solid #ccc;
 }
 .sidenav li.list-group-item h5 {
   padding-bottom: 10px;
