--- a/source/tech/index.md.erb
+++ b/source/tech/index.md.erb
@@ -28,4 +28,10 @@ This section of the documentation section targets readers that wish to understan
         <% types_by_entity_id.values.collect { |e| e['name'] }.sort.each do |entity_name| %>
         <li><%= link_to entity_name, "/generated/#{entity_name}.html"%></li>
         <% end %>
-    </ul></div>
+    </ul>
+</div>
+
+<div id="types_hierarchy">
+    <h3>Types by hierarchy</h3>
+    <%= type_list_by_hierarchy %>
+</div>
