moved old dereferenced folders and files to 'archive', mass changed datamodel to dataexchange, tweaked names and cleaned up links throughout, laid groundwork to generate ValueSet pages (not done).

--- a/source/entities/index.md.erb
+++ b/source/entities/index.md.erb
@@ -1,9 +1,10 @@
 ---
-title: Technical Reference 
+title: Entities
+description: The complete set of entities that are referenced by the Variant Pathogenicity Interpretation model. 
 
 ---
 
-This section of the documentation section targets readers that wish to understand the technical details of the interpretation model.   Developers trying to implement producers or consumers of interpretations will find here information about the entity definitions and the JSON Schema that can be used to validate messages.
+The entire list of Entities that comprise the Variant Pathogenicity Interpretation model are listed below. Developers trying to implement producers or consumers of interpretations will find here information about the entity definitions and the JSON Schema that can be used to validate messages.  
 
 <div id="types_by_concepts">
     <h3>Types by concepts</h3>
