--- a/source/entities/index.md.erb
+++ b/source/entities/index.md.erb
@@ -14,7 +14,7 @@ The entire list of Entities that comprise the Variant Pathogenicity Interpretati
             <% level2group.each do |level2, entities| %>
             <li><p><%= level2 %></p><ul>
                 <% entities.each do |entity_name| %>
-                <li><%= link_to entity_name, "/generated/#{entity_name}.html"%></li>
+                <li><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
                 <% end %>
             </ul></li>
             <% end %>
@@ -27,7 +27,7 @@ The entire list of Entities that comprise the Variant Pathogenicity Interpretati
     <h3>Types by name</h3>
     <ul>
         <% types_by_entity_id.values.collect { |e| e['name'] }.sort.each do |entity_name| %>
-        <li><%= link_to entity_name, "/generated/#{entity_name}.html"%></li>
+        <li><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
         <% end %>
     </ul>
 </div>
