--- a/source/entities/index.md.erb
+++ b/source/entities/index.md.erb
@@ -6,33 +6,48 @@ description: The complete set of entities that are referenced by the Variant Pat
 
 The entire list of Entities that comprise the Variant Pathogenicity Interpretation model are listed below. Developers trying to implement producers or consumers of interpretations will find here information about the entity definitions and the JSON Schema that can be used to validate messages.  
 
-<div id="types_by_concepts">
-    <h3>Types by concepts</h3>
-    <ul class="level1list">
-        <% types_by_concepts().each do |level1, level2group| %>
-        <li><p><%= level1 %></p><ul>
-            <% level2group.each do |level2, entities| %>
-            <li><p><%= level2 %></p><ul>
-                <% entities.each do |entity_name| %>
-                <li><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
+<ul class="nav nav-tabs" id="myTabs" role="tablist">
+    <li role="presentation" class="active">
+      <a href="#types_by_concepts" id="types_by_concepts-tab" role="tab" data-toggle="tab" aria-controls="types_by_concepts" aria-expanded="true">Categorized</a>
+  </li>
+  <li role="presentation" class="">
+      <a href="#types_alphabetical" role="tab" id="types_alphabetical-tab" data-toggle="tab" aria-controls="types_alphabetical" aria-expanded="false">Alphabetical</a>
+  </li> 
+  <li role="presentation" class="">
+      <a href="#types_hierarchy" role="tab" id="types_hierarchy-tab" data-toggle="tab" aria-controls="types_hierarchy" aria-expanded="false">Hierarchy</a>
+  </li> 
+</ul> 
+<div class="tab-content" id="">
+    <div class="tab-pane fade active in" role="tabpanel" id="types_by_concepts" aria-labelledby="types_by_concepts-tab">   <br />
+        <div class="col-sm-12">
+        <h2>Types by concepts</h2>
+        <ul class="list-unstyled row none">
+            <% types_by_concepts().each do |level1, level2group| %>
+            <li class="col-sm-12"><div class="panel panel-default"><div class="panel-heading h3 margin-none padding-none"><%= level1 %> </div>
+  <div class="panel-body"><ul class="list-unstyled row none">
+                <% level2group.each do |level2, entities| %>
+                <li class="col-sm-4 entity-display"><h4 class="border-bottom"><%= level2 %></h4><ul class="list-unstyled row none">
+                    <% entities.each do |entity_name| %>
+                    <li class="col-sm-12"><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
+                    <% end %>
+                </ul></li>
                 <% end %>
-            </ul></li>
+            </ul></div>
+</div></li>
             <% end %>
-        </ul></li>
-        <% end %>
-    </ul>
+        </ul>
+    </div></div>
+    <div class="tab-pane fade in" role="tabpanel" id="types_alphabetical" aria-labelledby="types_alphabetical-tab">
+        <br /><div class="col-sm-12"><h2>Types by name</h2>
+        <ul class="list-unstyled">
+            <% types_by_entity_id.values.collect { |e| e['name'] }.sort.each do |entity_name| %>
+            <li><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
+            <% end %>
+        </ul>
+    </div></div>
+    <div class="tab-pane fade in" role="tabpanel" id="types_hierarchy" aria-labelledby="types_hierarchy-tab">
+        <br /><div class="col-sm-12"><h2>Types by hierarchy</h2>
+        <%= type_list_by_hierarchy %>
+    </div></div>
 </div>
 
-<div id="types_alphabetical">
-    <h3>Types by name</h3>
-    <ul>
-        <% types_by_entity_id.values.collect { |e| e['name'] }.sort.each do |entity_name| %>
-        <li><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
-        <% end %>
-    </ul>
-</div>
-
-<div id="types_hierarchy">
-    <h3>Types by hierarchy</h3>
-    <%= type_list_by_hierarchy %>
-</div>
