--- a/source/entities/index.md.erb
+++ b/source/entities/index.md.erb
@@ -20,34 +20,39 @@ The entire list of Entities that comprise the Variant Pathogenicity Interpretati
 <div class="tab-content" id="">
     <div class="tab-pane fade active in" role="tabpanel" id="types_by_concepts" aria-labelledby="types_by_concepts-tab">   <br />
         <div class="col-sm-12">
-        <h2>Types by concepts</h2>
-        <ul class="list-unstyled row none">
-            <% types_by_concepts().each do |level1, level2group| %>
-            <li class="col-sm-12"><div class="panel panel-default"><div class="panel-heading h3 margin-none padding-none"><%= level1 %> </div>
-  <div class="panel-body"><ul class="list-unstyled row none">
-                <% level2group.each do |level2, entities| %>
-                <li class="col-sm-4 entity-display"><h4 class="border-bottom"><%= level2 %></h4><ul class="list-unstyled row none">
-                    <% entities.each do |entity_name| %>
-                    <li class="col-sm-12"><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
+            <h2>Types by concepts</h2>
+            <ul class="list-unstyled row none">
+                <% types_by_concepts().each do |level1, level2group| %>
+                <li class="col-sm-12"><div class="panel panel-default"><div class="panel-heading h4 margin-none padding-none"><%= level1 %> </div>
+                  <div class="panel-body"><ul class="list-unstyled row none">
+                    <% level2group.each do |level2, entities| %>
+                    <li class="col-sm-4 entity-display"><h4 class="border-bottom"><%= level2 %></h4><ul class="list-unstyled row none">
+                        <% entities.each do |entity_name| %>
+                        <li class="col-sm-12"><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
+                        <% end %>
+                    </ul></li>
                     <% end %>
-                </ul></li>
-                <% end %>
-            </ul></div>
-</div></li>
+                </ul></div>
+            </div></li>
             <% end %>
         </ul>
-    </div></div>
-    <div class="tab-pane fade in" role="tabpanel" id="types_alphabetical" aria-labelledby="types_alphabetical-tab">
-        <br /><div class="col-sm-12"><h2>Types by name</h2>
+    </div>
+</div>
+<div class="tab-pane fade in" role="tabpanel" id="types_alphabetical" aria-labelledby="types_alphabetical-tab">
+    <br />
+    <div class="col-sm-12"><h2>Types by name</h2>
         <ul class="list-unstyled">
             <% types_by_entity_id.values.collect { |e| e['name'] }.sort.each do |entity_name| %>
             <li><%= link_to entity_name, "/entities/#{entity_name}.html"%></li>
             <% end %>
         </ul>
-    </div></div>
-    <div class="tab-pane fade in" role="tabpanel" id="types_hierarchy" aria-labelledby="types_hierarchy-tab">
-        <br /><div class="col-sm-12"><h2>Types by hierarchy</h2>
+    </div>
+</div>
+<div class="tab-pane fade in" role="tabpanel" id="types_hierarchy" aria-labelledby="types_hierarchy-tab">
+    <br />
+    <div class="col-sm-12"><h2>Types by hierarchy</h2>
         <%= type_list_by_hierarchy %>
-    </div></div>
+    </div>
+</div>
 </div>
 
