removed extra 'active'

--- a/source/terminologies/index.md.erb
+++ b/source/terminologies/index.md.erb
@@ -34,7 +34,7 @@ description: The description of the controlled sets of terms also known as Value
       </table>
     </div>
   </div>
-  <div class="tab-pane fade active in" role="tabpanel" id="value_sets" aria-labelledby="value_sets-tab">
+  <div class="tab-pane fade in" role="tabpanel" id="value_sets" aria-labelledby="value_sets-tab">
     <div class="col-sm-12">
       <h3>Value Sets</h3>
       <p>This table contains a list of all the value sets defined as part of the Variant Pathogenicity Interpretation specification. Some of these value sets include concepts defined elsewhere, some contain their own inline identifier system definitions, and some do both. </p>
