--- a/source/templates/entity.html.erb
+++ b/source/templates/entity.html.erb
@@ -55,7 +55,7 @@
 
     <%- examples = examples_by_type(entity_id) || [] %>
     <% if examples.any? %>
-    <h2>Examples</h2>
+    <h2>Instances</h2>
     <table class="datatables table table-striped table-bordered" cellspacing=0 width="100%">
       <thead><tr>
         <th>ID</th>
