--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -133,7 +133,7 @@
               <%= link_with_local_index "Entities", "entities/index.html" %>
               <%= link_with_local_index "Terminologies", "terminologies/index.html" %>
               <li class="list-group-item">
-                <h5><%= link_to "Projects & Tools", "/projects.html", :relative => true %></h5>
+                <h5><%= link_to "Tools", "/tools.html", :relative => true %></h5>
               </li>
               <!-- Old style.  We might still need the model here? -->
               <!--%= link_with_local_index "Entities", "/#{current_page.data.model}/vampi/entities/index.html" %-->
